tests/errors/frame_exist_55/e2.src
.IPPcode21

DEFVAR GF@a
MOVE GF@a int@5
DEFVAR TF@b
